--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/MinshuG/FortniteReplayDecompressor.git
 [submodule "CUE4Parse"]
 	path = CUE4Parse
-	url = https://github.com/FabianFG/CUE4Parse.git
+	url = https://github.com/DLDrago/CUE4Parse
